# greskell

./: .gitignore  .travis.yml  README.md  cabal.project  cabal.project.freeze  greskell.cabal  run-janusgraph.sh  stack.yaml  todo.md
.github/workflows/: haskell.yml
freezes/: 20211116-ghc-8.10.7.freeze  20211116-ghc-9.0.1.freeze  20211202-ghc-9.0.1.freeze  20211228-ghc-8.10.7.freeze  20221123-ghc-9.2.5.freeze  20221124-ghc-9.2.5.freeze  20240912-ghc-9.2.1.freeze  20240912-ghc-9.6.1.freeze  20240912-ghc-9.8.1.freeze  20241031-ghc-9.10.1.freeze  20241105-ghc-9.4.1.freeze  20241121-ghc-9.10.1.freeze
gremlin-test/: build.gradle
gremlin-test/src/test/groovy/com/github/debug_ito/greskell/: MyModern.groovy  TestGremlin.groovy
gremlin_test/: build.gradle
gremlin_test/src/test/groovy/com/github/debug_ito/greskell/: TestGremlin.groovy
greskell/: ChangeLog.md  README.md  greskell.cabal
greskell-core/: ChangeLog.md  README.md  greskell-core.cabal
greskell-core/src/Data/Greskell/: AsIterator.hs  GMap.hs  GValue.hs  GraphSON.hs  Greskell.hs  IteratorItem.hs
greskell-core/src/Data/Greskell/GraphSON/: Core.hs  GValue.hs  GraphSONTyped.hs
greskell-core/test/: ExamplesSpec.hs
greskell-core/test/Data/Greskell/: GMapSpec.hs  GValueSpec.hs  GraphSONSpec.hs  GreskellSpec.hs
greskell-core/test/Data/Greskell/Test/: QuickCheck.hs
greskell-websocket/: ChangeLog.md  LICENSE  README.md  greskell-websocket.cabal
greskell-websocket/src/Data/Greskell/: WebSocket.hs
greskell-websocket/src/Data/Greskell/WebSocket/: Client.hs  Codec.hs  Connection.hs  Request.hs  Response.hs  Util.hs
greskell-websocket/src/Data/Greskell/WebSocket/Client/: Impl.hs  Options.hs  Settings.hs
greskell-websocket/src/Data/Greskell/WebSocket/Codec/: JSON.hs
greskell-websocket/src/Data/Greskell/WebSocket/Connection/: Impl.hs  Internal.hs  Settings.hs  Type.hs
greskell-websocket/src/Data/Greskell/WebSocket/Request/: Aeson.hs  Common.hs  Session.hs  Standard.hs
greskell-websocket/src/Network/Greskell/: WebSocket.hs
greskell-websocket/src/Network/Greskell/WebSocket/: Client.hs  Codec.hs  Connection.hs  Request.hs  Response.hs  Util.hs
greskell-websocket/src/Network/Greskell/WebSocket/Client/: Impl.hs  Options.hs
greskell-websocket/src/Network/Greskell/WebSocket/Codec/: JSON.hs
greskell-websocket/src/Network/Greskell/WebSocket/Connection/: Impl.hs  Settings.hs  Type.hs
greskell-websocket/src/Network/Greskell/WebSocket/Request/: Aeson.hs  Common.hs  Session.hs  Standard.hs
greskell-websocket/test/: ServerTest.hs
greskell-websocket/test/Data/Greskell/: WebSocketSpec.hs
greskell-websocket/test/Data/Greskell/WebSocket/Codec/: JSONSpec.hs
greskell-websocket/test/Network/Greskell/WebSocket/: ResponseSpec.hs
greskell-websocket/test/Network/Greskell/WebSocket/Codec/: JSONSpec.hs
greskell-websocket/test/ServerTest/: Client.hs  Connection.hs
greskell-websocket/test/TestUtil/: Env.hs  MockServer.hs  TCounter.hs
greskell-websocket/test/samples/: request_auth_v1.json  request_session_close_v1.json  request_session_eval_aliased_v1.json  request_session_eval_v1.json  request_sessionless_eval_aliased_v1.json  request_sessionless_eval_v1.json  response_auth_v2.json  response_auth_v3.json  response_standard_v1.json  response_standard_v2.json  response_standard_v3.json
greskell/src/Data/: Greskell.hs
greskell/src/Data/Greskell/: AsLabel.hs  Binder.hs  Extra.hs  GTraversal.hs  Graph.hs  Gremlin.hs  Greskell.hs  Logic.hs  NonEmptyLike.hs  PMap.hs
greskell/src/Data/Greskell/GTraversal/: Gen.hs
greskell/src/Data/Greskell/Graph/: Full.hs  PropertyMap.hs
greskell/test/: ExamplesSpec.hs  HintTest.hs  ServerBehaviorTest.hs  ServerTest.hs  TypeCheck.hs  Typecheck.hs
greskell/test/Data/Greskell/: BinderSpec.hs  ExtraSpec.hs  GTraversalSpec.hs  GraphSpec.hs  GremlinSpec.hs  LogicSpec.hs  PMapSpec.hs
greskell/test/Data/Greskell/Graph/: PropertyMapSpec.hs
greskell/test/ServerTest/: Common.hs
greskell/test/graphson/: edge_v3.json  path_v1.json  path_v2.json  path_v3.json  property.v2.json  property_v1.json  property_v3.json  vertex.v2.json  vertex_property.v3.json  vertex_property_v1.json
src/Data/: Greskell.hs
src/Data/Greskell/: Binder.hs  GBuilder.hs  GScript.hs  GTraversal.hs  Graph.hs  GraphSON.hs  Gremlin.hs  Greskell.hs
test/: HintTest.hs  ServerTest.hs
test-readme/: .gitignore  LICENSE  Setup.hs  test-readme.cabal
test-readme/app/: Main.hs
test-readme/src/Database/: TinkerPop.hs
test/Data/: GreskellSpec.hs
test/Data/Greskell/: BinderSpec.hs  GScriptSpec.hs  GTraversalSpec.hs  GraphSpec.hs  GremlinSpec.hs  GreskellSpec.hs
test/graphson/: edge.v1.json  edge.v2.json  vertex.v1.json  vertex.v3.json  vertex_property.v2.json
