name:                   greskell
version:                0.1.0.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell builder for Gremlin graph query language
-- description:            
-- category:               
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
-- homepage:               
-- bug-reports:            

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, GeneralizedNewtypeDeriving,
                        FlexibleInstances, MultiParamTypeClasses, TypeFamilies,
                        GADTs
  exposed-modules:      Data.Greskell,
                        Data.Greskell.Gremlin,
                        Data.Greskell.Greskell,
                        Data.Greskell.Binder,
                        Data.Greskell.Graph,
                        Data.Greskell.GTraversal
  -- other-modules:        
  build-depends:        base,
                        text,
                        transformers,
                        aeson,
                        unordered-containers,
                        semigroups,
                        scientific

-- executable greskell
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  other-modules:        Data.Greskell.GreskellSpec,
                        Data.Greskell.BinderSpec,
                        Data.Greskell.GTraversalSpec
  build-depends:        base, greskell, text, aeson, unordered-containers,
                        hspec,
                        QuickCheck,
                        hint

flag server-test
  description: Do tests with Gremlin Server.


test-suite server-test-suite
  if !flag(server-test)
    buildable: False
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              ServerTest.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings
  -- other-modules:        
  build-depends:        base, greskell, aeson, hspec,
                        gremlin-haskell


source-repository head
  type:                 git
--  location:             
