name:                   greskell-core
version:                0.1.3.0
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell binding for Gremlin graph query language - core data types and tools
description:            Haskell binding for [Gremlin graph query language](http://tinkerpop.apache.org/gremlin.html).
                        See [README.md](https://github.com/debug-ito/greskell/blob/master/README.md) for detail.
                        .
                        This package contains only core data types and tools used commonly by other related packages.
category:               Data
cabal-version:          >= 1.10
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/greskell/
bug-reports:            https://github.com/debug-ito/greskell/issues/

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, TypeFamilies, DeriveGeneric,
                        GeneralizedNewtypeDeriving, DeriveTraversable
  exposed-modules:      Data.Greskell.Greskell,
                        Data.Greskell.GraphSON,
                        Data.Greskell.GraphSON.GValue,
                        Data.Greskell.GMap,
                        Data.Greskell.AsIterator
  other-modules:        Data.Greskell.GraphSON.GraphSONTyped,
                        Data.Greskell.GraphSON.Core
  build-depends:        base >=4.9.0.0 && <4.13,
                        aeson >=1.0.2.1 && <1.5,
                        unordered-containers >=0.2.7.1 && <0.3,
                        hashable >=1.2.6.1 && <1.4,
                        scientific >=0.3.4.9 && <0.4,
                        text >=1.2.2.1 && <1.3,
                        semigroups >=0.18.2 && <0.20,
                        vector >=0.12.0.1 && <0.13,
                        containers >=0.5.7.1 && <0.7,
                        uuid >=1.3.13 && <1.4

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings, NoMonomorphismRestriction, CPP
  other-modules:        Data.Greskell.GreskellSpec,
                        Data.Greskell.GraphSONSpec,
                        Data.Greskell.GMapSpec,
                        Data.Greskell.Test.QuickCheck
  build-depends:        base, text, aeson, unordered-containers, vector,
                        greskell-core,
                        hspec >=2.2.3,
                        QuickCheck >=2.8.2 && <2.14,
                        bytestring >=0.10.8.1 && <0.11

test-suite doctest
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              DocTest.hs
  build-depends:        base,
                        doctest >=0.11 && <0.17,
                        doctest-discover >=0.1.0.7 && <0.3



source-repository head
  type:                 git
  location:             https://github.com/debug-ito/greskell.git
