name:                   greskell-core
version:                1.0.0.1
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell binding for Gremlin graph query language - core data types and tools
description:            Haskell binding for [Gremlin graph query language](http://tinkerpop.apache.org/gremlin.html).
                        See [README.md](https://github.com/debug-ito/greskell/blob/master/README.md) for detail.
                        .
                        This package contains only core data types and tools used commonly by other related packages.
category:               Data
cabal-version:          >= 2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/greskell/
bug-reports:            https://github.com/debug-ito/greskell/issues/

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, TypeFamilies, DeriveGeneric,
                        GeneralizedNewtypeDeriving, DeriveTraversable
  exposed-modules:      Data.Greskell.Greskell,
                        Data.Greskell.GraphSON,
                        Data.Greskell.GraphSON.GValue,
                        Data.Greskell.GMap,
                        Data.Greskell.AsIterator
  other-modules:        Data.Greskell.GraphSON.GraphSONTyped,
                        Data.Greskell.GraphSON.Core
  build-depends:        base,
                        aeson,
                        unordered-containers,
                        hashable,
                        scientific,
                        text,
                        semigroups,
                        vector,
                        containers,
                        uuid,
                        bytestring

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-incomplete-uni-patterns "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings, NoMonomorphismRestriction, CPP
  other-modules:        Data.Greskell.GreskellSpec,
                        Data.Greskell.GraphSONSpec,
                        Data.Greskell.GMapSpec,
                        Data.Greskell.Test.QuickCheck,
                        ExamplesSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base, text, aeson, unordered-containers, vector, bytestring,
                        greskell-core,
                        hspec,
                        QuickCheck

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/greskell.git
