name:                   greskell-core
version:                1.0.0.2
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell binding for Gremlin graph query language - core data types and tools
description:            Haskell binding for [Gremlin graph query language](http://tinkerpop.apache.org/gremlin.html).
                        See [README.md](https://github.com/debug-ito/greskell/blob/master/README.md) for detail.
                        .
                        This package contains only core data types and tools used commonly by other related packages.
category:               Data
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md
homepage:               https://github.com/debug-ito/greskell/
bug-reports:            https://github.com/debug-ito/greskell/issues/

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, TypeFamilies, DeriveGeneric,
                        GeneralizedNewtypeDeriving, DeriveTraversable
  exposed-modules:      Data.Greskell.Greskell,
                        Data.Greskell.GraphSON,
                        Data.Greskell.GraphSON.GValue,
                        Data.Greskell.GMap,
                        Data.Greskell.AsIterator
  other-modules:        Data.Greskell.GraphSON.GraphSONTyped,
                        Data.Greskell.GraphSON.Core
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                        unordered-containers ^>=0.2.15,
                        hashable ^>=1.4.0,
                        scientific ^>=0.3.7,
                        text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                        semigroups ^>=0.20,
                        vector ^>=0.12.3 || ^>=0.13.0,
                        containers ^>=0.6.2,
                        uuid ^>=1.3.15,
                        bytestring ^>=0.10.9 || ^>=0.11.3 || ^>=0.12.0

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports -fno-warn-incomplete-uni-patterns "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings, NoMonomorphismRestriction, CPP
  other-modules:        Data.Greskell.GreskellSpec,
                        Data.Greskell.GraphSONSpec,
                        Data.Greskell.GMapSpec,
                        Data.Greskell.Test.QuickCheck,
                        ExamplesSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                        aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                        unordered-containers ^>=0.2.15,
                        vector ^>=0.12.3 || ^>=0.13.0,
                        bytestring ^>=0.10.9 || ^>=0.11.3 || ^>=0.12.0,
                        greskell-core,
                        hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9,
                        QuickCheck ^>=2.14.2 || ^>=2.15.0

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/greskell.git
