name:                   greskell-websocket
version:                1.0.0.2
author:                 Toshio Ito <debug.ito@gmail.com>
maintainer:             Toshio Ito <debug.ito@gmail.com>
license:                BSD3
license-file:           LICENSE
synopsis:               Haskell client for Gremlin Server using WebSocket serializer
description:            Haskell client for [Gremlin Server](http://tinkerpop.apache.org/docs/current/reference/#gremlin-server) using WebSocket serializer.
                        See [README.md](https://github.com/debug-ito/greskell/blob/master/README.md) for detail.
                        .
                        This package is based on [greskell-core](http://hackage.haskell.org/package/greskell-core),
                        and best used with [greskell](http://hackage.haskell.org/package/greskell) package.
category:               Network
cabal-version:          2.0
build-type:             Simple
extra-source-files:     README.md, ChangeLog.md,
                        test/samples/*.json
homepage:               https://github.com/debug-ito/greskell/
bug-reports:            https://github.com/debug-ito/greskell/issues/

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -fno-warn-unused-imports
  -- default-extensions:   
  other-extensions:     OverloadedStrings, DuplicateRecordFields, DataKinds, TypeApplications,
                        DeriveGeneric, PartialTypeSignatures, FlexibleContexts,
                        CPP
  exposed-modules:      Network.Greskell.WebSocket,
                        Network.Greskell.WebSocket.Connection,
                        Network.Greskell.WebSocket.Connection.Settings,
                        Network.Greskell.WebSocket.Request,
                        Network.Greskell.WebSocket.Request.Common,
                        Network.Greskell.WebSocket.Request.Standard,
                        Network.Greskell.WebSocket.Request.Session,
                        Network.Greskell.WebSocket.Response,
                        Network.Greskell.WebSocket.Codec,
                        Network.Greskell.WebSocket.Codec.JSON
                        Network.Greskell.WebSocket.Client,
                        Network.Greskell.WebSocket.Client.Options
  other-modules:        Network.Greskell.WebSocket.Request.Aeson,
                        Network.Greskell.WebSocket.Connection.Impl,
                        Network.Greskell.WebSocket.Connection.Type,
                        Network.Greskell.WebSocket.Client.Impl,
                        Network.Greskell.WebSocket.Util
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        greskell-core ^>=1.0.0,
                        bytestring ^>=0.10.9 || ^>=0.11.3 || ^>=0.12.0,
                        base64-bytestring ^>=1.2.1,
                        text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                        aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                        unordered-containers ^>=0.2.15,
                        uuid ^>=1.3.15,
                        async ^>=2.2.4,
                        stm ^>=2.5.0,
                        websockets ^>=0.12.7 || ^>=0.13.0,
                        hashtables ^>=1.3,
                        safe-exceptions ^>=0.1.7,
                        vector ^>=0.12.3 || ^>=0.13.0

-- executable greskell-websocket
--   default-language:     Haskell2010
--   hs-source-dirs:       app
--   main-is:              Main.hs
--   ghc-options:          -Wall -fno-warn-unused-imports
--   -- other-modules:        
--   -- default-extensions:   
--   -- other-extensions:     
--   build-depends:        base

test-suite spec
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
  main-is:              Spec.hs
  -- default-extensions:   
  other-extensions:     OverloadedStrings, DuplicateRecordFields,
                        NoMonomorphismRestriction
  other-modules:        Network.Greskell.WebSocket.Codec.JSONSpec,
                        Network.Greskell.WebSocket.ResponseSpec
  build-tool-depends:   hspec-discover:hspec-discover
  build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                        greskell-websocket,
                        aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                        uuid ^>=1.3.15,
                        bytestring ^>=0.10.9 || ^>=0.11.3 || ^>=0.12.0,
                        unordered-containers ^>=0.2.15,
                        vector ^>=0.12.3 || ^>=0.13.0,
                        greskell-core ^>=1.0.0,
                        hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9


flag server-test
  description: Do test with a Gremlin Server
  default: False

test-suite server-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
                        -threaded
  main-is:              ServerTest.hs
  -- default-extensions:   
  --  other-extensions:     
  other-modules:        TestUtil.TCounter,
                        TestUtil.Env,
                        TestUtil.MockServer,
                        ServerTest.Connection,
                        ServerTest.Client
  if flag(server-test)
    build-depends:        base ^>=4.13.0 || ^>=4.14.0 || ^>=4.15.0 || ^>=4.16.0 || ^>=4.17.0 || ^>=4.18.0 || ^>=4.19.0 || ^>=4.20.0,
                          greskell-websocket,
                          greskell-core ^>=1.0.0,
                          aeson ^>=2.0.2 || ^>=2.1.0 || ^>=2.2.3,
                          uuid ^>=1.3.15,
                          unordered-containers ^>=0.2.15,
                          text ^>=1.2.3 || ^>=2.0.2 || ^>=2.1,
                          async ^>=2.2.4,
                          safe-exceptions ^>=0.1.7,
                          websockets ^>=0.12.7 || ^>=0.13.0,
                          bytestring ^>=0.10.9 || ^>=0.11.3 || ^>=0.12.0,
                          stm ^>=2.5.0,
                          vector ^>=0.12.3 || ^>=0.13.0,
                          hspec ^>=2.9.1 || ^>=2.10.6 || ^>=2.11.9
                          
  else
    buildable: False

source-repository head
  type:                 git
  location:             https://github.com/debug-ito/greskell.git
